proj1/tests/error/nested_class.py
class d:
	def __init__(self, x):
		class r:
			x = 1
